change: Update wording, update home page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 active: home
 layout: base
 ---
-<p>This is the <span class="emphasis">work-in-progress</span> website of Gueorgui Tcherednitchenko, a London-based photographer and software engineer.</p>
-<div class="photos">
-  <img src="/assets/images/front/where-the-story-begins-01.jpg" width="45%" alt="Where The Story Begins">
-  <img src="/assets/images/front/where-the-story-begins-02.jpg" width="45%" alt="Where The Story Begins">
+<section>
+  <header class="home-header">
+    <p>Hello! I'm <a href="/about">Gueorgui Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and developer, living and <a href="/projects">working</a> in London, UK.</p>
+  </header>
+</section>
+<div class="home-photos">
+  <img src="/assets/images/front/where-the-story-begins-01.jpg" alt="Where The Story Begins">
+  <img src="/assets/images/front/where-the-story-begins-02.jpg" alt="Where The Story Begins">
 </div>
-<p>The above images are from the project <em>&ldquo;Where The Story Begins&rdquo;</em> (2018&ndash;Ongoing), which premiered at the Royal College of Art <em>Show 2019</em>.</p>
-<p>The exhibition is accompanied by a book, <a href="https://a.possible.space/shop/where-the-story-begins">published by A Possible Space</a>.</p>
+<section>
+  <p>The above images are from the project <em>&ldquo;Where The Story Begins&rdquo;</em> (2018&ndash;Ongoing), which premiered at the Royal College of Art <em>Show 2019</em>.</p>
+  <p>The exhibition is accompanied by a book, <a href="https://a.possible.space/shop/where-the-story-begins">published by A Possible Space</a>.</p>
+</section>
 <hr/>
