change: Update 404 page

--- a/404.html
+++ b/404.html
@@ -3,5 +3,12 @@ layout: base
 permalink: /404.html
 title: Not found!
 ---
-<h1>404</h1>
-<p>The requested page was not found. Please take a look at the <a href="/">home page</a>, instead!</p>
+<header>
+  <h1>404</h1>
+</header>
+<section>
+  <figure class="centered">
+    <img src="/assets/images/404.jpg" />
+  </figure>
+  <p>Oh no! The requested page was not found. Please take a look at the <a href="/">home page</a> or the <a href="/projects">projects</a>, instead!</p>
+</section>
