change: Update copy

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ title: Not found!
 </header>
 <section>
   <figure class="centered">
-    <img src="/assets/images/404.jpg" />
+    <img src="/assets/images/404.jpg" alt="Goats in Mongolia" />
   </figure>
   <p>Oh no! The requested page was not found. Please take a look at the <a href="/">home page</a> or the <a href="/projects">projects</a>, instead!</p>
 </section>
