--- a/colophon.html
+++ b/colophon.html
@@ -11,7 +11,7 @@ title: Colophon
   <p>Design, development, photography by <a href="/about" rel="author">Gueorgui Tcherednitchenko</a>, illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
   <p>This website is hosted on <a href="https://pages.github.com/">GitHub Pages</a>, and was built on and using free and open source technologies. We all stand on the shoulders of giants.</p>
   <ul>
-    <li>Site generator: <a href="https://www.jekyllrb.com/">Jekyll 4.0</a>, with <a href="https://github.com/eggcaker/jekyll-org">jekyll-org</a></li>
+    <li>Site generator: <a href="https://www.jekyllrb.com/">Jekyll 4.0</a>, with <a href="https://github.com/eggcaker/jekyll-org">jekyll-org</a> and <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
     <li>Text editor: <a href="https://www.gnu.org/software/emacs/">Emacs</a> + <a href="https://github.com/hlissner/doom-emacs">Doom</a></li>
     <li>Version control: <a href="https://git-scm.com/">Git</a> via <a href="https://magit.vc/">Magit</a></li>
     <li>Icons: <a href="https://github.com/twitter/twemoji">Twemoji</a> from Twitter, via <a href="https://github.com/SebastianAigner/twemoji-amazing">twemoji-amazing</a></li>
