change: Fix top page layout in Safari

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@ layout: base
   </header>
 </section>
 <div class="home-photos">
-  <img src="/assets/images/front/where-the-story-begins-01.jpg" alt="Where The Story Begins">
-  <img src="/assets/images/front/where-the-story-begins-02.jpg" alt="Where The Story Begins">
+  <div class="home-photo">
+    <img src="/assets/images/front/where-the-story-begins-01.jpg" alt="Where The Story Begins">
+  </div>
+  <div class="home-photo">
+    <img src="/assets/images/front/where-the-story-begins-02.jpg" alt="Where The Story Begins">
+  </div>
 </div>
 <section>
   <p>The above images are from the project <em>&ldquo;Where The Story Begins&rdquo;</em> (2018&ndash;Ongoing), which premiered at the Royal College of Art <em>Show 2019</em>.</p>
