--- a/_projects/crush.html
+++ b/_projects/crush.html
@@ -1,9 +1,10 @@
 ---
 layout: project
 title: Crush
-timespan: 2017&ndash; (ongoing)
+timespan: 2017&ndash; (Ongoing)
 categories: photography
 featured_image: /assets/images/projects/crush/crush-10.jpg
+date: 2018-06-01
 ---
 
 <blockquote>
