--- a/_projects/long-distance-us.html
+++ b/_projects/long-distance-us.html
@@ -5,11 +5,11 @@ categories: ['Photography']
 timespan: 2018
 date: 2019-01-01
 featured_image: /assets/images/projects/long-distance-us/featured.jpg
-description: One summer, my partner and I had to spent a month apart, with me in China and her back in London. A Polaroid camera purchased in Hong Kong became a way for us to create physical mementos of this time spent separately, yet together.
+description: One summer, my partner and I had to spend a month apart, with me in China and her back in London. A Polaroid camera purchased in Hong Kong became a way for us to create physical mementos of this time spent separately, yet together.
 ---
 
 <section>
-  <p>One summer, my partner and I had to spent a month apart, with me in China and her back in London. A Polaroid camera purchased in Hong Kong became a way for us to create physical mementos of this time spent separately, yet together. </p>
+  <p>One summer, my partner and I had to spend a month apart, with me in China and her back in London. A Polaroid camera purchased in Hong Kong became a way for us to create physical mementos of this time spent separately, yet together. </p>
 </section>
 
 <hr/>
