change: Improve formating for TURBULENCE

--- a/_projects/turbulence.html
+++ b/_projects/turbulence.html
@@ -8,11 +8,13 @@ title: TURBULENCE
 ---
 <section>
   <p>My first zine, containing work from 2015-2016. An intensely personal documentary of changes both private and public, set in Tokyo, Japan.</p>
-  <p>
-    44 pages of black and white photographs, taken in 2015 and 2016.<br/>
-    Uncoated recycled paper, soft-cover, wire-stitched.<br/>
-    Edition of 100, self-published. <strong>Sold out</strong>.
-  </p>
+  <div class="product-info">
+    <p>
+      44 pages of black and white photographs, taken in 2015 and 2016.<br/>
+      Uncoated recycled paper, soft-cover, wire-stitched.<br/>
+      Edition of 100, self-published. <strong>Sold out</strong>.
+    </p>
+  </div>
 </section>
 
 <hr/>
