change: Remove references to APS online store

--- a/_projects/where-the-story-begins.html
+++ b/_projects/where-the-story-begins.html
@@ -20,7 +20,7 @@ featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
       Published by A Possible Space
     </p>
     <p class="cta">
-      <a class="button" href="https://a.possible.space/shop/where-the-story-begins">Buy a copy</a> &mdash; £13
+      <a class="button" href="mailto:hello@gueorgui.net?subject=Buy a copy of Where The Story Begins">Buy a copy</a> &mdash; £13
     </p>
   </div>
 </section>
@@ -147,7 +147,7 @@ featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
       Published by A Possible Space
     </p>
     <p class="cta">
-      <a class="button" href="https://a.possible.space/shop/where-the-story-begins">Buy a copy</a> &mdash; £13
+      <a class="button" href="mailto:hello@gueorgui.net?subject=Buy a copy of Where The Story Begins">Buy a copy</a> &mdash; £13
     </p>
   </div>
 </section>
