--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@ layout: base
 </div>
 <section>
   <p>The above images are from the project <em>&ldquo;<a href="/projects/where-the-story-begins/">Where The Story Begins</a>&rdquo;</em> (2018&ndash;Ongoing), which premiered at the Royal College of Art <em>Show 2019</em>.</p>
-  <p>The exhibition is accompanied by a book, <a href="https://a.possible.space/shop/where-the-story-begins">published by A Possible Space</a>.</p>
+  <p>The exhibition is accompanied by a book, published by A Possible Space.</p>
 </section>
