change: Formatting fix for Crush

--- a/_projects/crush.html
+++ b/_projects/crush.html
@@ -11,9 +11,11 @@ date: 2018-06-01
   “Other men take weeks, months before they fall in love, and even then they love but tepidly, nor can they dispense with endless talk, shared tastes and crystallisations. All I needed was one flutter of her eyelashes. Say I am mad, but believe me. A flutter of lashes, and she looked at me but did not see me, and suddenly I beheld the glory of spring and the sun and the warm sea and the transparency of water near the shore and my youth restored and the world fresh-minted...”
   <author>—Albert Cohen, Belle du Seigneur</author>
 </blockquote>
-<p>Since 2017, I’ve been photographing people living through one-sided love stories: crushes, unrequited passion, impossible love.</p>
-<p>Finding people through personals and social media, I asked them to take me to a place related to their relationship, and I photographed them as they reflected on the person in question.</p>
-<p>If you are in this situation yourself, I would love to photograph you. Please <a href="mailto:hello@gueorgui.net">email me</a>!</p>
+<section>
+  <p>Since 2017, I’ve been photographing people living through one-sided love stories: crushes, unrequited passion, impossible love.</p>
+  <p>Finding people through personals and social media, I asked them to take me to a place related to their relationship, and I photographed them as they reflected on the person in question.</p>
+  <p>If you are in this situation yourself, I would love to photograph you. Please <a href="mailto:hello@gueorgui.net">email me</a>!</p>
+</section>
 
 <hr/>
 
