change: Add award information to projects

--- a/_projects/crush.html
+++ b/_projects/crush.html
@@ -16,6 +16,9 @@ date: 2018-06-01
   <p>Finding people through personals and social media, I asked them to take me to a place related to their relationship, and I photographed them as they reflected on the person in question.</p>
   <p>If you are in this situation yourself, I would love to photograph you. Please <a href="mailto:hello@gueorgui.net">email me</a>!</p>
 </section>
+<section>
+  <p class="small">&mdash;<br>"Crush" has received a honourable mention in the "People, Portrait" category in the 2018 <em>International Photography Awards</em>.</p>
+</section>
 
 <hr/>
 
