--- a/_projects/returnees.html
+++ b/_projects/returnees.html
@@ -11,6 +11,9 @@ description: Work in progress
 <section>
   <p>Work in progress. Coming soon.</p>
 </section>
+<section>
+  <p class="small">&mdash;<br>"Returnees 海归" has won a honourable mention in the 2019 <em>PX3 Prix de la Photographie Paris</em> competition. The project was also selected for a portfolio review by the <em>Bourse des Amis du Musée Albert Kahn</em>.</p>
+</section>
 <hr/>
 <section class="gallery">
   <figure>
