change: Update Returnees metadata

--- a/_projects/returnees.html
+++ b/_projects/returnees.html
@@ -5,7 +5,7 @@ categories: ['Photography', 'Writing']
 timespan: 2018
 date: 2019-09-01
 featured_image: /assets/images/projects/returnees/featured.jpg
-description: Work in progress
+description: On foreignness and home. A collaboration with writer Hengtee Lim.
 ---
 
 <section>
