new: Blog post, layout improvements

--- a/_projects/returnees.html
+++ b/_projects/returnees.html
@@ -26,7 +26,7 @@ description: On foreignness and home. A collaboration with writer Hengtee Lim.
   </p>
   <blockquote>
     The photographs are presented here paired with a short story titled
-    "Different Worlds", by writer <a href="https://twitter.com/hent03">Hengtee
+    “Different Worlds”, by writer <a href="https://twitter.com/hent03">Hengtee
     Lim</a>. His book, "<a href="https://www.snippetsbooks.com/">Something
     Like Hope</a>", is out now.
   </blockquote>
