--- a/blog.html
+++ b/blog.html
@@ -19,4 +19,4 @@ title: Blog
   {% include post_card.html %}
 {% endfor %}
 
-<h2><i class="twa twa-cricket"></i></h2>
+<h2 class="text-centered"><i class="twa twa-cricket"></i></h2>
