change: Many small tweaks

--- a/_projects/returnees.html
+++ b/_projects/returnees.html
@@ -2,7 +2,7 @@
 layout: project
 title: Returnees 海归
 categories: ['Photography', 'Writing']
-timespan: 2018
+timespan: 2018&ndash;2019
 date: 2019-09-01
 featured_image: /assets/images/projects/returnees/featured.jpg
 description: On foreignness and home. A collaboration with writer Hengtee Lim.
