fix: Fix typo and typography in Returnees

--- a/_projects/returnees.html
+++ b/_projects/returnees.html
@@ -27,12 +27,15 @@ description: On foreignness and home. A collaboration with writer Hengtee Lim.
   <blockquote>
     The photographs are presented here paired with a short story titled
     “Different Worlds”, by writer <a href="https://twitter.com/hent03">Hengtee
-    Lim</a>. His book, "<a href="https://www.snippetsbooks.com/">Something
-    Like Hope</a>", is out now.
+    Lim</a>. His book, “<a href="https://www.snippetsbooks.com/">Something
+    Like Hope</a>”, is out now.
   </blockquote>
 </section>
 <section>
-  <p class="small">&mdash;<br>"Returnees 海归" has won a honourable mention in the 2019 <em>PX3 Prix de la Photographie Paris</em> competition. The project was also selected for a portfolio review by the <em>Bourse des Amis du Musée Albert Kahn</em>.</p>
+  <p class="small">&mdash;<br>“Returnees 海归” has won a honourable mention in
+  the 2019 <em>PX3 Prix de la Photographie Paris</em> competition. The project
+  was also selected for a portfolio review by the <em>Bourse des Amis du Musée
+  Albert Kahn</em>.</p>
 </section>
 
 <hr/>
@@ -50,7 +53,7 @@ description: On foreignness and home. A collaboration with writer Hengtee Lim.
 
   <section class="text col right-col">
     <h2>Different Worlds</h2>
-    <p class="meta">By <a href="https:/twitter.com/hent03">Hengtee Lim</a></p>
+    <p class="meta">By <a href="https://twitter.com/hent03">Hengtee Lim</a></p>
 
     <p>
       Before she left again, Min said the world had changed. It was not something
