--- a/now.html
+++ b/now.html
@@ -6,7 +6,7 @@ active: now
 <header>
   <h1>What I'm working on now</h1>
   <div class="meta">
-    <p>Updated on 2019/12/22</p>
+    <p>Updated on 2020/04/21</p>
   </div>
 </header>
 
@@ -14,36 +14,22 @@ active: now
 
 <section>
   <header>
-    <h2>This website</h2>
+    <h2>In lockdown</h2>
   </header>
-  <p>I'm rebuilding my long-suffering website, which has spent many years living on various content management platforms (Squarespace, Format, and most recently Cargo). I'm now building it myself, in the spirit of the <a href="https://indieweb.org/">IndieWeb</a> movement.</p>
-  <p>Many different things combined to bring about this rebuild:</p>
-  <ul>
-    <li>I read a lot about data ownership and wanted to retain control of my online presence;</li>
-    <li>I joined a fantastic online community, <a href="https://merveilles.town/@gueorgui">Merveilles</a>, the members of which inspired me with their own web projects and fiercely independent spirit;</li>
-    <li>Two designers I respect, <a href="https://www.frankchimero.com/">Frank Chimero</a> and <a href="https://www.destroytoday.com/">Jonnie Hallmann</a>, are both publicly documenting the redesigns of their websites, which inspired me to finally start on this;</li>
-    <li>After art school, I'm back in the tech world, and want to use my website not merely as a photography portfolio, but as a place to experiment with ways of expression, which requires control on how the website is actually built.</li>
-  </ul>
-  <p>My initial hope was to finish a rebuild before the end of 2019, but now I see that this will be a much longer iterative process, with possibly no end in sight.</p>
+  <p>Like many people around the world, we're living in a state of lockdown. I'm keeping busy with work so far, and I usually work from home, so it is not a <em>huge</em> change for me, however I cannot deny that anxiety levels are hightened.</p>
 </section>
 
 <section>
   <header>
-    <h2>A Possible Space</h2>
+    <h2>Studying Ruby and Lisp</h2>
   </header>
-  <p>The <a href="https://a.possible.space">creative studio</a> that <a href="https://www.tingyilai.com">Tingyi</a> and I are running is steadily growing and transforming. While it started as a commercial photography venture, it's changing into more of a vehicle for all of our activities, from photography to art psychotherapy workshops to book publishing to software development projects. If you would like to work with us, <a href="mailto:us@possible.space?subject=Let's work together!">please shoot us an email</a>!</p>
-</section>
-
-<section>
-  <header>
-    <h2>We Build Your MVP</h2>
-  </header>
-  <p>I've teamed up with the wonderful designer <a href="https://mathieumayer.com/">Mathieu Mayer</a> to run <a href="https://webuildyourmvp.com">We Build Your MVP</a>, a small product team-for-hire sort of thing. If you or your company has an idea that needs some firepower to get off the ground, please talk to us!</p>
+  <p>In an effort to get back in programming shape, I'm making time to deepen my studies of Ruby (because I work with it daily) and Lisp (because I can use a variant of it, Emacs Lisp, to basically live inside my text editor)</p>
 </section>
 
 <section>
   <header>
     <h2>Rethinking my workflows</h2>
   </header>
-  <p>I'm in the middle of rethinking and reworking the processes involved in doing my work. I'm approaching this rethink with attention paid to sustainability, future-proofing, and ownership of data and systems, so it is focusing a lot on free and open source software and systems. This is a long-term project, and something I'm very interested in.</p>
+  <p>I've moved from mac OS to GNU/Linux as my primary operating system a couple of months ago, and I'm now in the process of rebuilding my workflows on this new platform.</p>
+  <p>I chose Linux because I wanted to build my work environment around free, open source software, and I'm having a blast figuring out new and powerful new ways to do my work.</p>
 </section>
