change: Developer -> programmer

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: About
     <img src="/assets/images/illustrations/about.png" alt="Illustration by Tingyi Lai" />
     <figcaption>Illustration by Tingyi Lai</figcaption>
   </figure>
-  <p>Hi! My name is Gueorgui<sup class="reference" id="reference-bio-1"><a href="#footnote-bio-1">1</a></sup> and I am a Russian-born, French-raised photographer, designer, and developer living and working in London.</p>
+  <p>Hi! My name is Gueorgui<sup class="reference" id="reference-bio-1"><a href="#footnote-bio-1">1</a></sup> and I am a Russian-born, French-raised photographer, designer, and programmer living and working in London.</p>
   <p>I have been online since the mid-1990's, and have been working with the Web ever since then. I studied software engineering at Epitech in Paris in the early 2000s, and more recently photography at the Royal College of Art in London.</p>
   <p>Many of my interests lie at the intersection of art and technology, and this website is intended as an online space for documenting and archiving various <a href="/projects">projects</a> I'm involved with.</p>
   <p>For the last 2 years, I've been running <a href="https://a.possible.space/">A Possible Space</a>, a tiny creative studio I've co-founded with my wife. Before that, among other things, I've been the CTO of product design agency <a href="https://aqworks.com/">AQ</a> in Tokyo, and co-founded the civic tech startup Local Republic.</p>
