--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: base
 ---
 <section>
   <header class="home-header">
-    <p>Hello! I'm <a href="/about">Gueorgui Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and developer, living and <a href="/projects">working</a> in London, UK.</p>
+    <p>Hello! I'm <a href="/about">Gueorgui Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
   </header>
 </section>
 <div class="home-photos">
@@ -17,5 +17,5 @@ layout: base
 </div>
 <section>
   <p>The above images are from the project <em>&ldquo;<a href="/projects/where-the-story-begins/">Where The Story Begins</a>&rdquo;</em> (2018&ndash;Ongoing), which premiered at the Royal College of Art <em>Show 2019</em>.</p>
-  <p>The exhibition is accompanied by a book, published by A Possible Space.</p>
+  <p>The exhibition is accompanied by a book, published by <a href="https://a.possible.space/">A Possible Space</a>.</p>
 </section>
