change: Update Now page

--- a/now.html
+++ b/now.html
@@ -6,7 +6,7 @@ active: now
 <header>
   <h1>What I'm working on now</h1>
   <div class="meta">
-    <p>Updated on 2020/04/21</p>
+    <p>Updated on 2020/12/28</p>
   </div>
 </header>
 
@@ -14,22 +14,29 @@ active: now
 
 <section>
   <header>
-    <h2>In lockdown</h2>
+    <h2>Still in lockdown</h2>
   </header>
-  <p>Like many people around the world, we're living in a state of lockdown. I'm keeping busy with work so far, and I usually work from home, so it is not a <em>huge</em> change for me, however I cannot deny that anxiety levels are hightened.</p>
+  <p>Like many people around the world, we're living in a state of lockdown. I'm keeping busy with work so far, and I usually work from home, so it is not a <em>huge</em> change for me, however I cannot deny that anxiety levels are hightened. Update at the end of December 2020: This is still the case and it's freaking me out a little bit how _well_ we're coping.</p>
 </section>
 
 <section>
   <header>
-    <h2>Studying Ruby and Lisp</h2>
+    <h2>Building a little project</h2>
   </header>
-  <p>In an effort to get back in programming shape, I'm making time to deepen my studies of Ruby (because I work with it daily) and Lisp (because I can use a variant of it, Emacs Lisp, to basically live inside my text editor)</p>
+  <p>In an effort to move away from selling my time towards selling products, I'm trying my hand at building a little commercial product, that derives from a little hobby project I've built earlier this year. I hope to have a very simple first version in the first couple of months of 2021, and will share more then.</p>
 </section>
 
 <section>
   <header>
-    <h2>Rethinking my workflows</h2>
+    <h2>Back to the Mac</h2>
   </header>
-  <p>I've moved from mac OS to GNU/Linux as my primary operating system a couple of months ago, and I'm now in the process of rebuilding my workflows on this new platform.</p>
-  <p>I chose Linux because I wanted to build my work environment around free, open source software, and I'm having a blast figuring out new and powerful new ways to do my work.</p>
+  <p>I got tired of fighting with both software and hardware in the Linux/PC world, so I went back to Apple. I have no regrets: I have learned a great deal about computing and tooling in general when I was using Linux, and a lot of this knowledge has carried over. Meanwhile, every day work and tasks are just much easier and smoother back on a Mac.</p>
+  <p>I do miss some things from Linux, such as tiling window managers, and I'm sure my Linux adventures are not over forever, but for now, I'm happy to be productive again.</p>
+</section>
+
+<section>
+  <header>
+    <h2>Dreaming of travel</h2>
+  </header>
+  <p>2020 has seen more than its fair share of cancelled trips, and I've been daydreaming poring over Lonely Planet guides recently. Among destinations I'm most eager to get to: Taiwan, Italy, and Scotland.</p>
 </section>
