--- a/colophon.html
+++ b/colophon.html
@@ -9,7 +9,7 @@ title: Colophon
 
 <section>
   <p>Design, programming, photography by <a href="/about" rel="author">Gueorgui Tcherednitchenko</a>, illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
-  <p>This website is hosted on <a href="https://vercel.com/">Vercel</a>, and was built on and using free and open source technologies. We all stand on the shoulders of giants.</p>
+  <p>This website is hosted on <a href="https://render.com/">Render</a>, and was built on and using free and open source technologies. We all stand on the shoulders of giants.</p>
   <ul>
     <li>Typeset in <a href="https://github.com/IBM/plex">IBM Plex</a> Sans and Mono</li>
     <li>Site generator: <a href="https://www.jekyllrb.com/">Jekyll 4.0</a>, with <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
