--- a/newsletter.html
+++ b/newsletter.html
@@ -11,21 +11,19 @@ active: newsletter
 
 <section>
   <p>Please leave your email address to receive occasional updates on new work, projects, exhibitions, and more. No spam ever, and an instant unsubscribe link in every email!</p>
-  <!-- Begin Mailchimp Signup Form -->
-  <div class="centered" id="mc_embed_signup">
-    <form action="https://gueorgui.us1.list-manage.com/subscribe/post?u=6867c0db79fd86873bd76b79f&amp;id=4b30bfc6a5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div id="mc_embed_signup_scroll">
-        <input type="email" value="" name="EMAIL" class="required email" placeholder="Email address" id="mce-EMAIL">
-        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-        <div id="mce-responses" class="clear">
-          <div class="response" id="mce-error-response" style="display:none"></div>
-          <div class="response" id="mce-success-response" style="display:none"></div>
-        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6867c0db79fd86873bd76b79f_4b30bfc6a5" tabindex="-1" value=""></div>
-      </div>
+  <div class="centered">
+    <form
+      action="https://buttondown.email/api/emails/embed-subscribe/gueorgui"
+      method="post"
+      target="popupwindow"
+      onsubmit="window.open('https://buttondown.email/gueorgui', 'popupwindow')"
+      class="embeddable-buttondown-form"
+      >
+      <input type="email" name="email" id="bd-email" placeholder="you@email.com" />
+      <input type="hidden" value="1" name="embed" />
+      <input type="submit" value="Subscribe" />
     </form>
   </div>
-  <!--End mc_embed_signup-->
 </section>
 
 <section name="photo">
