new: Update home page image

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@ layout: base
 </section>
 <div class="home-photos">
   <div class="home-photo">
-    <img src="/assets/images/projects/where-the-story-begins/where-the-story-begins-07.jpg" alt="Where The Story Begins">
-  </div>
-  <div class="home-photo">
-    <img src="/assets/images/projects/where-the-story-begins/where-the-story-begins-08.jpg" alt="Where The Story Begins">
+    <img src="/assets/images/home_untitled.jpg" alt="Untitled (2021)" title="Untitled (2021)">
   </div>
 </div>
 <section>
-  <p>The above images are from the project <em>&ldquo;<a href="/projects/where-the-story-begins/">Where The Story Begins</a>&rdquo;</em> (2018&ndash;Ongoing), which premiered at the Royal College of Art <em>Show 2019</em>.</p>
-  <p>The exhibition is accompanied by a book, published by <a href="https://a.possible.space/">A Possible Space</a>.</p>
+  <p>The above image is from a yet-untitled project, started in 2020 and slowly being developed.</p>
 </section>
