--- a/colophon.html
+++ b/colophon.html
@@ -13,8 +13,8 @@ title: Colophon
   <ul>
     <li>Typeset in <a href="https://github.com/IBM/plex">IBM Plex</a> Sans and Mono</li>
     <li>Site generator: <a href="https://www.jekyllrb.com/">Jekyll 4.0</a>, with <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
-    <li>Text editor: <a href="https://neovim.io">Neovim</a>
-    <li>Version control: <a href="https://git-scm.com/">Git</a></li>
+    <li>Text editor: <a href="https://www.gnu.org/software/emacs/">Emacs</a> (<a href="https://github.com/hlissner/doom-emacs">Doom Emacs</a>)</li>
+    <li>Version control: <a href="https://git-scm.com/">Git</a> via <a href="https://magit.vc">Magit</a></li>
     <li>Icons: <a href="https://github.com/twitter/twemoji">Twemoji</a> from Twitter (via <a href="https://github.com/SebastianAigner/twemoji-amazing">twemoji-amazing</a>), RSS icon adapted from <a href="http://www.feedicons.com/">FeedIcons</a></li>
   </ul>
 </section>
