change: Update email address

--- a/_projects/the-long-way-home.html
+++ b/_projects/the-long-way-home.html
@@ -16,7 +16,7 @@ title: The Long Way Home
       A4 format, perfect bound<br/>
     </p>
     <p class="cta">
-      <a class="button" href="mailto:hello@gueorgui.net?subject=Buy a copy of The Long Way Home">Buy a copy</a> &mdash; £18
+      <a class="button" href="mailto:gueorgui@possible.space?subject=Buy a copy of The Long Way Home">Buy a copy</a> &mdash; £18
     </p>
   </div>
 </section>
@@ -117,7 +117,7 @@ title: The Long Way Home
       A4 format, perfect bound<br/>
     </p>
     <p class="cta">
-      <a class="button" href="mailto:hello@gueorgui.net?subject=Buy a copy of The Long Way Home">Buy a copy</a> &mdash; £18
+      <a class="button" href="mailto:gueorgui@possible.space?subject=Buy a copy of The Long Way Home">Buy a copy</a> &mdash; £18
     </p>
   </div>
 </section>
