--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ title: About
 </section>
 <section name="contact">
   <p>
-    Contact: <a href="mailto:hello@gueorgui.net">hello@gueorgui.net</a><br/>
+    Contact: <a href="mailto:gueorgui@possible.space">gueorgui@possible.space</a><br/>
     Commissions: <a href="mailto:us@possible.space">us@possible.space</a><br/>
     Follow: <a href="https://merveilles.town/@gueorgui">Merveilles</a>, <a href="https://twitter.com/gueorgui">Twitter</a>, <a href="https://github.com/gueorgui">GitHub</a>.
   </p>
