--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@ layout: base
     <p>Hello! I'm <a href="/about">Gueorgui Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
   </header>
 </section>
-<div class="home-photos">
-  <div class="home-photo">
-    <img src="/assets/images/home_untitled.jpg" alt="Untitled (2021)" title="Untitled (2021)">
-  </div>
-</div>
+<a class="hero" href="https://standforukraine.com/">
+  Нет войне!<br/>
+  No war!
+</a>
 <section>
-  <p>The above image is from a yet-untitled project, started in 2020 and slowly being developed.</p>
+  <p class="text-centered">Как гражданин России, я категорически против войны развязанной российским руководством против Украины. Пожалуйста, поддержите Украину вот здесь: <a href="https://standforukraine.com/ru">Stand for Ukraine</a>.</p>
+  <p class="text-centered">As a Russian citizen, I am categorically against the war Russia’s leadership is currently waging against Ukraine. Please support Ukraine here: <a href="https://standforukraine.com/">Stand for Ukraine</a>.</p>
+  <h1 class="text-centered">🇺🇦</h1>
 </section>
+<!-- <div class="home-photos">
+     <div class="home-photo">
+     <img src="/assets/images/home_untitled.jpg" alt="Untitled (2021)" title="Untitled (2021)">
+     </div>
+     </div>
+     <section>
+     <p>The above image is from a yet-untitled project, started in 2020 and slowly being developed.</p>
+     </section> -->
