change: War update

--- a/_projects/crush.html
+++ b/_projects/crush.html
@@ -1,7 +1,7 @@
 ---
 layout: project
 title: Crush
-timespan: 2017&ndash; (Ongoing)
+timespan: 2017&ndash;2018
 categories: ['Photography']
 featured_image: /assets/images/projects/crush/featured.jpg
 date: 2018-06-01
@@ -12,9 +12,8 @@ date: 2018-06-01
   <author>—Albert Cohen, Belle du Seigneur</author>
 </blockquote>
 <section>
-  <p>Since 2017, I’ve been photographing people living through one-sided love stories: crushes, unrequited passion, impossible love.</p>
+  <p>In 2017–2018, I’ve been photographing people living through one-sided love stories: crushes, unrequited passion, impossible love.</p>
   <p>Finding people through personals and social media, I asked them to take me to a place related to their relationship, and I photographed them as they reflected on the person in question.</p>
-  <p>If you are in this situation yourself, I would love to photograph you. Please <a href="mailto:gueorgui@possible.space">email me</a>!</p>
 </section>
 <section>
   <p class="small">&mdash;<br>"Crush" has received a honourable mention in the "People, Portrait" category in the 2018 <em>International Photography Awards</em>.</p>
