--- a/_projects/the-long-way-home.html
+++ b/_projects/the-long-way-home.html
@@ -15,9 +15,7 @@ title: The Long Way Home
       76 pages, 50 photographs<br/>
       A4 format, perfect bound<br/>
     </p>
-    <p class="cta">
-      <a class="button" href="mailto:gueorgui@possible.space?subject=Buy a copy of The Long Way Home">Buy a copy</a> &mdash; £18
-    </p>
+    <p>Sold out.</p>
   </div>
 </section>
 
@@ -116,8 +114,8 @@ title: The Long Way Home
       76 pages, 50 photographs<br/>
       A4 format, perfect bound<br/>
     </p>
-    <p class="cta">
-      <a class="button" href="mailto:gueorgui@possible.space?subject=Buy a copy of The Long Way Home">Buy a copy</a> &mdash; £18
+    <p>
+      Sold out.
     </p>
   </div>
 </section>
