--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@ layout: base
     <p>Hello! I'm <a href="/about">Gueorgui Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
   </header>
 </section>
-<a class="hero" href="https://standforukraine.com/">
-  Нет войне!<br/>
-  No war!
-</a>
+<section class="hero">
+  <a href="https://standforukraine.com/">
+    <span class="ua-flag-top">Нет войне!</span><br/>
+    <span class="ua-flag-bottom">No war!</span>
+  </a>
+</section>
 <section>
   <p class="text-centered">Как гражданин России, я категорически против войны развязанной российским руководством против Украины. Пожалуйста, поддержите Украину вот здесь: <a href="https://standforukraine.com/ru">Stand for Ukraine</a>.</p>
   <p class="text-centered">As a Russian citizen, I am categorically against the war Russia’s leadership is currently waging against Ukraine. Please support Ukraine here: <a href="https://standforukraine.com/">Stand for Ukraine</a>.</p>
