--- a/newsletter.html
+++ b/newsletter.html
@@ -13,10 +13,10 @@ active: newsletter
   <p>Please leave your email address to receive occasional updates on new work, projects, exhibitions, and more. No spam ever, and an instant unsubscribe link in every email!</p>
   <div class="centered">
     <form
-      action="https://buttondown.email/api/emails/embed-subscribe/gueorgui"
+      action="https://buttondown.email/api/emails/embed-subscribe/gosha"
       method="post"
       target="popupwindow"
-      onsubmit="window.open('https://buttondown.email/gueorgui', 'popupwindow')"
+      onsubmit="window.open('https://buttondown.email/gosha', 'popupwindow')"
       class="embeddable-buttondown-form"
       >
       <input type="email" name="email" id="bd-email" placeholder="you@email.com" />
