--- a/_projects/where-the-story-begins.html
+++ b/_projects/where-the-story-begins.html
@@ -2,7 +2,7 @@
 layout: project
 title: Where The Story Begins
 categories: ['Photography', 'Book design', 'Publishing']
-timespan: 2018&ndash; (Ongoing)
+timespan: 2018&ndash;2019
 date: 2020-01-01
 featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
 ---
@@ -20,7 +20,7 @@ featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
       Published by A Possible Space
     </p>
     <p class="cta">
-      <a class="button" href="mailto:gueorgui@possible.space?subject=Buy a copy of Where The Story Begins">Buy a copy</a> &mdash; £13
+      <a class="button" href="mailto:mail@gosha.net?subject=Buy a copy of Where The Story Begins">Buy a copy</a> &mdash; £13
     </p>
   </div>
 </section>
@@ -147,7 +147,7 @@ featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
       Published by A Possible Space
     </p>
     <p class="cta">
-      <a class="button" href="mailto:gueorgui@possible.space?subject=Buy a copy of Where The Story Begins">Buy a copy</a> &mdash; £13
+      <a class="button" href="mailto:mail@gosha.net?subject=Buy a copy of Where The Story Begins">Buy a copy</a> &mdash; £13
     </p>
   </div>
 </section>
