--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@ title: About
 </section>
 <section name="contact">
   <p>
-    Contact: <a href="mailto:gueorgui@possible.space">gueorgui@possible.space</a><br/>
+    Contact: <a href="mailto:mail@gosha.net">mail@gosha.net</a><br/>
     Commissions: <a href="mailto:us@possible.space">us@possible.space</a><br/>
-    Follow: <a href="https://merveilles.town/@gueorgui">Merveilles</a>, <a href="https://github.com/gueorgui">GitHub</a>.
+    Follow: <a href="https://twitter.com/goshaphoto">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, <a href="https://github.com/gueorgui">GitHub</a>.
   </p>
 </section>
 <section>
