change: Update social links

--- a/colophon.html
+++ b/colophon.html
@@ -24,7 +24,7 @@ title: Colophon
 <section>
   <p>
     Last updated on {{ site.data.git.date | readableDate }}<br/>
-    <code><a href="https://github.com/gueorgui/gueorgui.net/commit/{{ site.data.git.commitHash }}">{{ site.data.git.commitHash }}</a></code>
+    <code><a href="https://github.com/goshatch/gosha.net/commit/{{ site.data.git.commitHash }}">{{ site.data.git.commitHash }}</a></code>
     &rarr; {{ site.data.git.subject }}
   </p>
   <p>
