--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ title: About
   <p>
     Contact: <a href="mailto:mail@gosha.net">mail@gosha.net</a><br/>
     Commissions: <a href="mailto:us@possible.space">us@possible.space</a><br/>
-    Follow: <a href="https://twitter.com/goshaphoto">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, <a href="https://github.com/gueorgui">GitHub</a>.
+    Follow: <a href="https://twitter.com/goshatch">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, <a href="https://github.com/goshatch">GitHub</a>.
   </p>
 </section>
 <section>
@@ -41,7 +41,7 @@ title: About
     <h2>Books</h2>
   </header>
   <ul>
-    <li><a href="https://a.possible.space/shop/where-the-story-begins">Where The Story Begins</a><br><span class="detail">With Tingyi Lai, published by A Possible Space, 56 pages, 100 copies. (2019)</span></li>
+    <li><a href="/projects/where-the-story-begins">Where The Story Begins</a><br><span class="detail">With Tingyi Lai, published by A Possible Space, 56 pages, 100 copies. (2019)</span></li>
     <li><a href="/projects/the-long-way-home" rel="history">The Long Way Home</a><br><span class="detail">Self-published, 76 pages, 200 copies. (2018)</span></li>
     <li><a href="/projects/turbulence" rel="history">TURBULENCE</a><br><span class="detail">Self-published, 44 pages, 100 copies. Sold out. (2016)</span></li>
   </ul>
