change: Gueorgui -> Gosha

--- a/colophon.html
+++ b/colophon.html
@@ -8,7 +8,7 @@ title: Colophon
 </header>
 
 <section>
-  <p>Design, programming, photography by <a href="/about" rel="author">Gueorgui Tcherednitchenko</a>, illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
+  <p>Design, programming, photography by <a href="/about" rel="author">Gosha Tcherednitchenko</a>, illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
   <p>This website is hosted on <a href="https://render.com/">Render</a>, and was built on and using free and open source technologies. We all stand on the shoulders of giants.</p>
   <ul>
     <li>Typeset in <a href="https://github.com/IBM/plex">IBM Plex</a> Sans and Mono</li>
