--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: base
 ---
 <section>
   <header class="home-header">
-    <p>Hello! I'm <a href="/about">Gueorgui Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
+    <p>Hello! I'm <a href="/about">Gosha Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
   </header>
 </section>
 <section class="hero">
