change: Homepage update

--- a/index.html
+++ b/index.html
@@ -5,24 +5,14 @@ layout: base
 <section>
   <header class="home-header">
     <p>Hello! I'm <a href="/about">Gosha Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
+    <p>You can find me on <a href="https://twitter.com/goshatch">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, and <a href="https://merveilles.town/@gosha">Mastodon</a>.</p>
   </header>
 </section>
-<section class="hero">
-  <a href="https://standforukraine.com/">
-    <span class="ua-flag-top">Нет войне!</span><br/>
-    <span class="ua-flag-bottom">No war!</span>
-  </a>
-</section>
+<div class="home-photos">
+  <div class="home-photo">
+    <img src="/assets/images/home_war.jpg" alt="Untitled (London&mdash;Bucha) (2022)" title="Untitled (London&mdash;Bucha) (2022)">
+  </div>
+</div>
 <section>
-  <p class="text-centered">Как гражданин России, я категорически против войны развязанной российским руководством против Украины. Пожалуйста, поддержите Украину вот здесь: <a href="https://standforukraine.com/ru">Stand for Ukraine</a>.</p>
-  <p class="text-centered">As a Russian citizen, I am categorically against the war Russia’s leadership is currently waging against Ukraine. Please support Ukraine here: <a href="https://standforukraine.com/">Stand for Ukraine</a>.</p>
-  <h1 class="text-centered">🇺🇦</h1>
+  <p>From the <i>London&mdash;Bucha</i> event in front of the embassy of the Russian Federation in London, spring 2022.</p>
 </section>
-<!-- <div class="home-photos">
-     <div class="home-photo">
-     <img src="/assets/images/home_untitled.jpg" alt="Untitled (2021)" title="Untitled (2021)">
-     </div>
-     </div>
-     <section>
-     <p>The above image is from a yet-untitled project, started in 2020 and slowly being developed.</p>
-     </section> -->
