change: Restore Newsletter link, some tweaks

--- a/newsletter.html
+++ b/newsletter.html
@@ -6,11 +6,11 @@ active: newsletter
 ---
 
 <header>
-  <h1>Infrequent email updates</h1>
+  <h1>The Infrequent Update</h1>
 </header>
 
 <section>
-  <p>Please leave your email address to receive occasional updates on new work, projects, exhibitions, and more. No spam ever, and an instant unsubscribe link in every email!</p>
+  <p>Please leave your email address to receive occasional updates on life, new work, projects, exhibitions, and more. No spam ever, and an instant unsubscribe link in every email!</p>
   <div class="centered">
     <form
       action="https://buttondown.email/api/emails/embed-subscribe/gosha"
@@ -31,5 +31,3 @@ active: newsletter
     <img src="/assets/images/newsletter/newsletter.jpg" alt="Hand catching water streaming from a faucet" width="100%">
   </figure>
 </section>
-
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
